# SSD_project_g1

./: .gitignore  README.md  brewery-openapi.yaml  pyproject.toml
backend/: README.md  db.sqlite3  pyproject.toml
backend/backend/: settings.py  urls.py
backend/beers/: admin.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
backend/beers/fixtures/: beers.json
backend/beers/validation/: validation_constants.py  validators.py
backend/test/beers/: test_models.py  test_urls.py
common/: pyproject.toml
common/domain/: domain.py
gui/: db.json  package-lock.json  package.json  tsconfig.json
gui/public/: index.html
gui/src/: App.js  App.tsx  index.tsx  reportWebVitals.ts
gui/src/components/: BeerDetail.js  BeerDetail.tsx  BeerEdit.tsx  BeerForm.tsx  BeerList.tsx  BreweryDetail.js  BreweryList.js  Header.tsx  LoginPage.tsx
gui/src/models/: Beer.ts
gui/src/routes/: PrivateRoute.tsx
gui/src/services/: AuthService.ts  BeerService.ts  api.js  axiosConfig.ts
gui/src/themes/: theme.ts
presentation/: BeerHub.pptx
tui/: README.md  pyproject.toml
tui/beer_hub/: __init__.py  __main__.py  app.py  delete_me.txt  domain.py  domain_old.py  logic.py  mapper.py  menu.py
tui/tests/: test___main__.py  test_app.py  test_domain.py  test_logic.py  test_mapper.py  test_menu.py
