[tool.poetry]
name = "common"
version = "0.1.0"
description = "Domainclasses for BeerHub"
authors = ["Flotschi <tanicruzzer2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
valid8 = "^5.1.2"
validation = "^0.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

