[tool.poetry]
name = "tui"
version = "0.1.0"
description = ""
authors = ["Flotschi <tanicruzzer2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
valid8 = "^5.1.2"
typeguard = "^4.4.1"
beer-hub-client = {path = "beer-hub-client"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

