[tool.poetry]
name = "tui"
version = "0.1.0"
description = ""
authors = ["Flotschi, Simon"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
valid8 = "^5.1.2"
typeguard = "^4.4.1"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
openapi-python-client = "^0.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

